Correct the Hero image css code to stop image overlapping with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,15 @@ h1, h2 {
     height: 600px;
     width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
+
+    /* animates zoom effect on the loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+#cover-text, #cover-text h2 {
+    color: #fff;
 }
 
 #hero-outer{
@@ -68,14 +77,7 @@ h1, h2 {
     overflow: hidden;
 
     position: relative;
-
-    /* animates zoom effect on the loading page */
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
 }
-
-
 
 /* Creates a level of zoom for the Hero Image */
 
@@ -140,4 +142,8 @@ hr {
 
 .right-about-heading p {
     text-align: right;
+}
+
+#welcome {
+    text-align: center;
 }
